<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.paul.androidstudentmanager.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:id="@+id/first_name"
        android:textSize="25sp"
        android:padding="15dp" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:inputType="textPersonName"
        android:id="@+id/first_name_input"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/first_name"
        android:layout_toEndOf="@id/first_name"
        android:hint="@string/enter_name_hint"
        android:textColorHint="#222222"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_name"
        android:text="@string/last_name"
        android:textSize="25sp"
        android:padding="15dp"
        android:id="@+id/last_name"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_toRightOf="@id/last_name"
        android:layout_toEndOf="@id/last_name"
        android:layout_below="@id/first_name"
        android:inputType="textPersonName"
        android:id="@+id/last_name_input"
        android:hint="@string/enter_name_hint"
        android:textColorHint="#222222"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/last_name"
        android:textSize="25sp"
        android:padding="15dp"
        android:text="@string/age"
        android:id="@+id/age"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_below="@id/last_name"
        android:layout_toRightOf="@id/age"
        android:layout_toEndOf="@id/age"
        android:inputType="number"
        android:id="@+id/age_input"
        android:hint="@string/enter_age_hint"
        android:textColorHint="#222222"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/age"
        android:layout_centerHorizontal="true"
        android:text="@string/ready"
        android:onClick="checkStudent"
        android:id="@+id/check_button"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/go_button"
        android:layout_below="@+id/check_button"
        android:layout_centerHorizontal="true"
        android:text="@string/second_activity_start_button"
        android:onClick="saveStudent" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/go_button"
        android:text="Show all"
        android:id="@+id/show_students_activity_start_button"
        android:onClick="showStudents"/>

</RelativeLayout>
